others からの alias をつかった import を廃止

--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -4,8 +4,7 @@
     "typeRoots": ["types", "node_modules/@types"],
     "baseUrl": "./",
     "paths": {
-      "src/*": ["src/*"],
-      "others/*": ["../others/*"]
+      "src/*": ["src/*"]
     }
   }
 }
