--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "sourceMap": true,
     "typeRoots": ["types", "node_modules/@types"],
+    "lib": ["es2015"],
+    "skipLibCheck": true,
     "baseUrl": "./",
     "paths": {
       "src/*": ["src/*"]
